src/main/java/com/example/tms/error/InvalidUserTaskException.java
package com.example.tms.error;

public class InvalidUserTaskException extends RuntimeException {
    public InvalidUserTaskException(String message) {super(message);}
}
